--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,13 +2,51 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: rgb(35, 40, 64);
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+}
+
+
+.title h1 {
+  margin-top: 10rem;
+  color: rgb(246, 73, 167);
+  font-size: 10rem;
+  font-family: 'Rubik 80s Fade', cursive;
+}
+
+.dark-bg {
+  background: rgb(35, 40, 64);
+}
+
+.center-items {
+  text-align: center;
+  margin: 2rem auto;
 }
 
 a {
-  color: inherit;
+  color: rgb(246, 73, 167);
   text-decoration: none;
+}
+
+a:link {
+  color: rgb(246, 73, 167);
+  text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+  color: rgb(113, 2, 80);
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: rgb(82, 3, 193);
 }
 
 * {
